--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,62 @@
-# Evita di tracciare dipendenze e build
-dist/
+# Dipendenze e build
 node_modules/
-.cache/
-*.log
-*.lock
+/dist/
+/.cache/
+/build/
+/.parcel-cache/
 
-# Evita di tracciare file di configurazione locali e ambienti
-.env
-*.local
-*.env.local
+# File di lock (scegli quale mantenere in base al tuo package manager)
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Log e debug
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
 
-# Evita di tracciare file specifici del sistema operativo
+# Variabili d'ambiente e configurazioni locali
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.local
+
+# File specifici del sistema operativo
 .DS_Store
 Thumbs.db
+.directory
+desktop.ini
 
-# Evita di tracciare configurazioni specifiche dell'IDE
-.vscode/
+# Editor e IDE
 .idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 *.iml
+.project
+.classpath
+
+# Coverage e test
+/coverage/
+.nyc_output/
+.jest-cache/
+
+# File temporanei
+.tmp/
+.temp/
+tmp/
+temp/
+
+# Altri file da ignorare
+.vercel
+.netlify
+.next/
